# hindmarsh-rust

./: .gitmodules  BIO_P2_HIDALGO_SIMON.md  Cargo.toml  README.md  TODO.md
src/: main.rs
