[package]
name = "hindmarsh-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
hindmarsh-rose-rs = { path = "./hindmarsh-rose-rs" }
fast-chemical-synapse-rs= { path = "./fast-chemical-synapse-rs" }
model-data-io = { path = "./model-data-io" }

[workspace]
members = [
  "hindmarsh-rose-rs",
  "hindmarsh-rose-analyzer-rs",
  "model-data-io",
  "electrical-synapse-rs",
  "fast-chemical-synapse-rs",
  "slow-chemical-synapse-rs",
  "."
]


